# deepagents-logs

./: .gitignore  README.md  pyproject.toml
src/deepagents_logs/: __init__.py  cli.py
src/deepagents_logs/core/: config.py  env.py  io.py  layout.py  paths.py  readme.py  redact.py  s3.py  serialize.py  session_logger.py  state.py
src/deepagents_logs/doctor/: checks.py
src/deepagents_logs/hooks/: dispatcher.py  session_hook.py
src/deepagents_logs/installers/: deepagents_config.py  env_config.py  hooks_config.py
src/deepagents_logs/providers/: base.py  gigachat.py  langchain.py
tests/: test_config_install.py  test_env_install.py  test_hooks_install.py  test_langchain_provider.py  test_layout.py  test_redact.py  test_session_logger.py
